@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST Params-Validate-0.78.tar.gz 54145 RMD160 b362e747a00c133d7a75b3d63485bc676f99355e SHA1 449e9cc57ae379422eab2bb2c4ac5a6a6ad24ef2 SHA256 5ef0a74af2808151644ce28150690bfb9ca98a2070197d58a0e5a1ebd5a2e65b
-DIST Params-Validate-0.81.tar.gz 55276 RMD160 afbc33e68658bf4dc6cd824914a63577a081bea9 SHA1 98be1c99539f03fb82f6206cdde4fa925ab4abe4 SHA256 1fb8d0a4b9a57fdd746f2caa5b7bd59b7ea91f545abce40c0c2d8c9ef8eb63ca
-DIST Params-Validate-0.86.tar.gz 79567 RMD160 3c61b8bffc5609730c871909a6f91cd2391d01fa SHA1 f81f7ebc3bff2f795fbe4c9877ab9134408bcff6 SHA256 cf381182872bedd5f70fdb297863373bdfcac4f10f1b276aa227e9722b258be5
-DIST Params-Validate-0.87.tar.gz 79688 RMD160 09f82e383c3ec40b181bec2feffe5295d4ee9ca7 SHA1 42ad54d456dd3704e2dff221ccd10804168273ed SHA256 cb1719d4d1568d07b97621733bd164faac0556c05df9e4212980afb5cf73b5d9
 DIST Params-Validate-0.88.tar.gz 79925 RMD160 98b35353b3760450ead6b52d6966b7d72d0afa3e SHA1 ec7e2d9c50f6fd8ea109f4497afbd22b055b74b0 SHA256 889636e3fc3344aecfc700f9de69c12e56064d39c8479d9333488ae0db442607
 DIST Params-Validate-0.91.tar.gz 89148 RMD160 05518278394840da68065ce0c8f280394c1133f9 SHA1 d4377c17a248489b14ae5947f633275615cf38a5 SHA256 3b309a3533ee7f185ecb12e6d9feb0949ada3898497195e17acf37b7eee810c8
-EBUILD Params-Validate-0.78.ebuild 652 RMD160 0616a2a4573e8be3303662cc5e6127dce11fe13a SHA1 7d633029975ffe0e91eb26255bb345cf88c35172 SHA256 3844dab06c1f142bfb605c8f7808f2548c9372075437d4e32549233b75ee5a7a
-EBUILD Params-Validate-0.81.ebuild 653 RMD160 bebb059fe60a91640528aff7e5c1b71fc6290f27 SHA1 636e40ba1b070a6b1a62ec52f084ce429afd7753 SHA256 53370f077beadec63de28f537b080356f435057864c610bcb2190a270683adc9
-EBUILD Params-Validate-0.86.ebuild 659 RMD160 136c8bf090d17ac475d6205cd45360f57fb6fcc7 SHA1 31b920d6ea41a911fcb597360a89f466f8bf2c89 SHA256 a80672766b02ae4a46cc5bfe39e10375755ad39ee3802590fbf0990a55188d52
-EBUILD Params-Validate-0.87.ebuild 663 RMD160 e4d42b794ca988632e1ec0c77ddc35ef63a993b3 SHA1 94188573c186576c51ca67c177ba5c2d6f76b357 SHA256 971738cfb8ddb3199fe356e6f4171d5abd8beb1710c668dde11d8bc87a7a4d6f
 EBUILD Params-Validate-0.88.ebuild 654 RMD160 3269c6103a5e9d5fa849ba3794fa6c60ed2f3820 SHA1 c17fe2e485bab50fa4588be914d35a8747811a1c SHA256 22e77a3b46d3eeb991d8a35b273f028dc4cb81038a17ea440117697eee99ff67
 EBUILD Params-Validate-0.91.ebuild 591 RMD160 57ca9f7af84bb8fdc412646fc6c2128cc0cef024 SHA1 fbb2004d40e52b92eadd6832173b44accf0476a5 SHA256 2a4a9963100dc27fc82d610741a745d4eb2f9517eebdbc9d09e8462dce956cc3
-MISC ChangeLog 8228 RMD160 c5f42ac5bda6eefe5b81966fe690ddceb4bf5de8 SHA1 7f9bca5ffa53a10fb4af59c87bd8a078900ea86d SHA256 e88beeb151e9f5981ddbfada3d44e25bff13c559b47eccf35c9f6f91a3d0e6a4
+MISC ChangeLog 8411 RMD160 cd8e161607802e87469027ea47eacb5f5cdd4940 SHA1 eece73597e41a282a296a72b1a6bbef6adf8400a SHA256 f49ccd02d44c05958a4c57608dbcdb91843f77cd0f06e8be60e6d9dd26c83943
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkjE0hoACgkQV3J2n04Eauy3TwCgkbB/jBQh7WYTG5MsrwA2ow9N
-3o4An3ENfH5eveAzw8/gwEBu9uo9rscU
-=Lwry
+iEYEARECAAYFAkjE0zgACgkQV3J2n04Eauz7oACgywyTEhsjihfs+G96VDBZLxvl
+cOoAnj4jF0aaP3qYqm6BmhbCCwml5YeW
+=BFSC
 -----END PGP SIGNATURE-----
