@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Params-Validate
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.65 2008/09/08 07:20:08 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.66 2008/09/08 07:24:55 tove Exp $
+
+  08 Sep 2008; Torsten Veller <tove@gentoo.org>
+  -Params-Validate-0.78.ebuild, -Params-Validate-0.81.ebuild,
+  -Params-Validate-0.86.ebuild, -Params-Validate-0.87.ebuild:
+  Cleanup
 
 *Params-Validate-0.91 (08 Sep 2008)
 
